--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack -d && webpack-dev-server",
-    "deploy": ""
+    "build": "webpack -p"
   },
   "keywords": [],
   "author": "",
